[package]
name = "geello"
version = "0.1.6"
edition = "2024"
license = "MIT"
authors = ["Dead Poet Spoon <deadpoetspoon@qq.com>"]
description = "A tool to render geo data"
homepage = "https://github.com/DeadPoetSpoon/geello"
documentation = "https://docs.rs/geello/"
readme = "./README.md"
repository = "https://github.com/DeadPoetSpoon/geello"
keywords = ["gis", "geo", "map-render", "2d", "vector-graphics"]
categories = ["science::geo"]

[dependencies]
geo = "0.30.0"
geo-types = { version = "0.7.16", features = [
    "multithreading",
    "rayon",
    "serde",
] }
serde = { version = "1.0.219", features = ["derive"] }
skrifa = "0.31.3"
vello = "0.5.0"
# vello = { git = "https://github.com/linebender/vello.git" }
peniko = { version = "0.4.0", default-features = false, features = ["serde"] }
log = "0.4.27"
tokio = { version = "1.45.1", features = ["full"] }

# server
image = { version = "0.25.6", features = ["serde"], optional = true }
ron = { version = "0.10.1", optional = true }
geojson = { version = "0.24.2", optional = true }
rocket = { version = "0.5.1", optional = true }
rocket_ws = { version = "0.1.1", optional = true }
reqwest = { version = "0.12.20", optional = true }

[features]
server = ["image", "ron", "geojson", "rocket", "rocket_ws", "reqwest"]
